--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main class="container-fluid bg-secondary text-center">
       <div>
-        <h1>Welcome</h1>
+        <h1>elcome</h1>
         <p>Login to play</p>
         <div>
           <input type="text" id="name" placeholder="Your name here" />
