--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
     <main class="container-fluid text-center">
       <div>
+        <img src="sample image.jpg" style="width: 50vw;">
+      </div>
+      <div>
         <h1>elcome</h1>
         <p>Login to play</p>
         <div>
