--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <main class="container-fluid text-center">
-      <div>
+      <div class="mainContent">
         <img src="sample image.jpg" style="width: 50vw;">
       </div>
       <div>
